fix shadow on button on firefox

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -163,10 +163,8 @@ html, body {
 
 .xPacButton:hover {
     transform: scale(0.81);
-    -webkit-filter: drop-shadow(0px 0px 5px rgb(0, 0, 0));
 }
 
 .xPacButton:active {
     transform: scale(0.79);
-    -webkit-filter: drop-shadow(0px 0px 0px rgb(0, 0, 0));
 }
